add pagination to items ( done)